--- a/example/gateway-browser/src/index.html
+++ b/example/gateway-browser/src/index.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-    <title>JS SDK Lightstreams - Lightstreams Network</title>
-</head>
+    <head>
+        <meta charset="UTF-8"/>
+        <title>JS SDK Lightstreams - Lightstreams Network</title>
+    </head>
 
-<body>
-<div id="root"></div>
-<script src="./index.js" />
-</body>
+    <body>
+        <div id="root"></div>
+        <script src="index.js"></script>
+    </body>
 </html>
