--- a/example/gateway-browser/src/index.html
+++ b/example/gateway-browser/src/index.html
@@ -1,11 +1,11 @@
-<html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <title>JS SDK Lightstreams - Lightstreams Network</title>
-    </head>
-
-    <body>
-        <div id="root"></div>
-        <script src="index.js"></script>
-    </body>
+<!DOCTYPE html>
+<html lang="en_US">
+  <head>
+    <meta charset="utf-8">
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
